--- a/signIn-with-apple/build.gradle
+++ b/signIn-with-apple/build.gradle
@@ -1,36 +1,69 @@
+// android/build.gradle
+
+def DEFAULT_COMPILE_SDK_VERSION = 28
+def DEFAULT_BUILD_TOOLS_VERSION = '28.0.3'
+def DEFAULT_MIN_SDK_VERSION = 16
+def DEFAULT_TARGET_SDK_VERSION = 28
+def DEFAULT_KOTLIN_VERSION = '1.3.61' // IMPORTANT: this is also manually set in buildscript since it is evaluated first
+
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
+buildscript {
+    def kotlin_version = rootProject.ext.has('kotlinVersion') ? rootProject.ext.get('kotlinVersion') :  '1.3.61'
+      
+    // The Android Gradle plugin is only required when opening the android folder stand-alone.
+    // This avoids unnecessary downloads and potential conflicts when the library is included as a
+    // module dependency in an application project.
+    // ref: https://docs.gradle.org/current/userguide/tutorial_using_tasks.html#sec:build_script_external_dependencies
+    if (project == rootProject) {
+        repositories {
+            google()
+            jcenter()
+
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:3.4.2'
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.+'
+        }
+    }
+}
+
+apply plugin: 'com.android.library'
+apply plugin: 'maven'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-    resourcePrefix "sign_in_with_apple_button_"
-
+    compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
+    buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
     defaultConfig {
-        minSdkVersion 22
-        targetSdkVersion 29
+        minSdkVersion safeExtGet('minSdkVersion', DEFAULT_MIN_SDK_VERSION)
+        targetSdkVersion safeExtGet('targetSdkVersion', DEFAULT_TARGET_SDK_VERSION)
         versionCode 1
         versionName "1.0"
 
         vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-        }
+    lintOptions {
+        abortOnError false
     }
 }
+
+repositories {
+    google()
+    jcenter()
+    mavenCentral()
+}
+
+def kotlin_version = safeExtGet('kotlinVersion', DEFAULT_KOTLIN_VERSION)
 
 dependencies {
     implementation "androidx.core:core-ktx:1.2.0"
@@ -48,8 +81,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
-repositories {
-    mavenCentral()
+if (project == rootProject) {
+    apply from: '../publish.gradle'
 }
-
-apply from: '../publish.gradle'
